# graded-monads

./: .gitignore  README.md  aggregate-errors.cabal  cabal.project  flake.nix  graded-monads.cabal  shell.nix
.github/workflows/: cabal.yaml  haskell.yml
app/: Aggregate.hs  Main.hs
ci/: 9.0.1.project  9.0.1.project.freeze  9.0.2.project  9.0.2.project.freeze  9.2.6.project  9.2.6.project.freeze  9.4.5.project  9.4.5.project.freeze
examples/aggregate-errors/: Main.hs
examples/aggregated-errors/: Main.hs
examples/aggregated-logs/: Main.hs
src/Control/Monad/: Graded.hs
src/Control/Monad/Graded/: Except.hs  ExceptT.hs  Writer.hs
src/Control/Monad/Graded/Except/: Class.hs
src/Control/Monad/Graded/Writer/: Class.hs
