cabal-version:      2.4
name:               aggregate-errors
version:            0.1.0.0
description:        A clever trick for aggregating different error types in a single do block.
bug-reports:        https://github.com/solomon-b/aggregate-errors
author:             solomon
maintainer:         ssbothwell@gmail.com
extra-source-files: CHANGELOG.md

executable aggregate-errors
    main-is:          Main.hs
    other-modules:
      Aggregate
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
